--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>BEIS</title>
   </head>
   <body>
-    <header style="background-color: black"> <img src="IMAGE/beis.png" />
+    <header style="background-color: black">
+      <img src="IMAGE/beis.png" />
       <h1 class="USERNAME">BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &TRADE;</h1>
       <div class="topnav">
         <div class="topnav">
@@ -17,37 +18,94 @@
           <a href="#news">News</a>
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
-        </div> <hr>
-      </header>
-   
+        </div>
+        <hr />
+      </div>
+    </header>
+
     <main class="wrapper">
       <aside>
         <h2>this is aside element</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur saepe quos libero vero, eaque adipisci, eum dolore obcaecati voluptatibus cumque in fugiat ipsa non repellendus enim! Iusto sint dolorem tenetur.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur saepe quos libero vero, eaque adipisci, eum dolore obcaecati voluptatibus cumque in fugiat ipsa non repellendus enim! Ius[...]
         </p>
-
       </aside>
-      <section><h2>this is the section </h2><p>
-        Lorem ipsum 50, dolor sit amet consectetur adipisicing elit.
-        Reprehenderit ducimus quisquam maiores odit vero, quibusdam excepturi,
-        minima numquam voluptatem officia sit? Molestias, aliquam? Ut sint
-        ratione beatae sed? Cumque, accusantium.Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. quo eius quod! Impedit optio quis veritas
-        tenetur. Illo facilis quod vel unde omnis, quia magnam laborum
-        distinctio vitae voluptatum corporis.
-      
-      </p></section>
-      <article><h2>this is the article</h2><p>
-        Lorem ipsum 50, dolor sit amet consectetur adipisicing elit.
-        Reprehenderit ducimus quisquam maiores odit vero, quibusdam excepturi,
-        minima numquam voluptatem officia sit? Molestias, aliquam? Ut sint
-        ratione beatae sed? Cumque, accusantium.Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. quo eius quod! Impedit optio quis veritas
-        tenetur. Illo facilis quod vel unde omnis, quia magnam laborum
-        distinctio vitae voluptatum corporis.
-      </p></article>
-       </main>
-       <footer id="footer"> <h1>footer</h1>
-       </body>
+      <section>
+        <h2>this is the section </h2>
+        <p>
+          Lorem ipsum 50, dolor sit amet consectetur adipisicing elit.
+          Reprehenderit ducimus quisquam maiores odit vero, quibusdam excepturi,
+          minima numquam voluptatem officia sit? Molestias, aliquam? Ut sint
+          ratione beatae sed? Cumque, accusantium.Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. quo eius quod! Impedit optio quis veritas
+          tenetur. Illo facilis quod vel unde omnis, quia magnam laborum
+          distinctio vitae voluptatum corporis.
+        </p>
+      </section>
+      <article>
+        <h2>this is the article</h2>
+        <p>
+          Lorem ipsum 50, dolor sit amet consectetur adipisicing elit.
+          Reprehenderit ducimus quisquam maiores odit vero, quibusdam excepturi,
+          minima numquam voluptatem officia sit? Molestias, aliquam? Ut sint
+          ratione beatae sed? Cumque, accusantium.Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. quo eius quod! Impedit optio quis veritas
+          tenetur. Illo facilis quod vel unde omnis, quia magnam laborum
+          distinctio vitae voluptatum corporis.
+        </p>
+      </article>
+    </main>
+    <footer id="footer" style="background: #222; color: #f4f4f4; padding: 40px 0 0 0; font-family: 'Segoe UI', Arial, sans-serif;">
+      <div style="max-width: 1200px; margin: auto; padding: 0 24px;">
+        <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 40px;">
+          <div style="flex: 1 1 260px;">
+            <img src="IMAGE/beis.png" alt="BEIS Logo" style="height: 60px; margin-bottom: 16px;" />
+            <p style="font-size: 1.05em; margin-bottom: 8px;">
+              <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION & TRADE</strong>
+            </p>
+            <p style="font-size: 0.97em; color: #bbb;">
+              Empowering Investments. Enabling Growth. <br>
+              Addis Ababa, Ethiopia
+            </p>
+          </div>
+          <div style="flex: 1 1 180px;">
+            <h3 style="margin-top: 0; color: #ffd700; font-size: 1.15em;">Quick Links</h3>
+            <ul style="list-style: none; padding: 0; margin: 0;">
+              <li><a href="#home" style="color: #f4f4f4; text-decoration: none;">Home</a></li>
+              <li><a href="#about" style="color: #f4f4f4; text-decoration: none;">About</a></li>
+              <li><a href="#news" style="color: #f4f4f4; text-decoration: none;">News</a></li>
+              <li><a href="#contact" style="color: #f4f4f4; text-decoration: none;">Contact</a></li>
+            </ul>
+          </div>
+          <div style="flex: 1 1 220px;">
+            <h3 style="margin-top: 0; color: #ffd700; font-size: 1.15em;">Contact</h3>
+            <p style="margin: 0 0 8px 0;">
+              <span style="display: inline-block; width: 22px;">📞</span>
+              <a href="tel:+251900000000" style="color: #f4f4f4; text-decoration: none;">+251 900 000 000</a>
+            </p>
+            <p style="margin: 0 0 8px 0;">
+              <span style="display: inline-block; width: 22px;">✉️</span>
+              <a href="mailto:info@beis.et" style="color: #f4f4f4; text-decoration: none;">info@beis.et</a>
+            </p>
+            <p style="margin: 0;">
+              <span style="display: inline-block; width: 22px;">🌐</span>
+              <a href="https://beis.et" style="color: #f4f4f4; text-decoration: none;">www.beis.et</a>
+            </p>
+          </div>
+          <div style="flex: 1 1 120px;">
+            <h3 style="margin-top: 0; color: #ffd700; font-size: 1.15em;">Follow Us</h3>
+            <div style="display: flex; gap: 18px;">
+              <a href="#" aria-label="Facebook" style="color: #f4f4f4; font-size: 1.5em; text-decoration: none;">&#x1F426;</a>
+              <a href="#" aria-label="LinkedIn" style="color: #f4f4f4; font-size: 1.5em; text-decoration: none;">&#x1F465;</a>
+              <a href="#" aria-label="Twitter" style="color: #f4f4f4; font-size: 1.5em; text-decoration: none;">&#x1F426;</a>
+            </div>
+          </div>
+        </div>
+        <hr style="border: none; border-top: 1px solid #333; margin: 32px 0 14px 0;">
+        <div style="text-align: center; padding-bottom: 18px; color: #aaa; font-size: 0.98em;">
+          &copy; 2025 BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION & TRADE. All rights reserved.
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
