--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="IMAGE/beis.png" alt="BEIS Logo" class="beis-logo"/>
         </a>
         <div class="beis-header-content">
-          <h1 class="beis-title">BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &TRADE</h1>
+          <h1 class="beis-title">BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION  &trade </h1>
           <nav class="beis-nav">
             <a class="active" href="#home">Home</a>
             <a href="#news">News</a>
@@ -32,7 +32,7 @@
         <div class="beis-hero-content">
           <h2>Empowering Investment, Enabling Growth</h2>
           <p>
-            Welcome to <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &TRADE</strong> (BEIS). <br>
+            Welcome to <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &trade</strong> (BEIS). <br>
             We connect opportunities, deliver solutions, and drive sustainable growth in Ethiopia’s investment landscape.
           </p>
           <a href="#about" class="beis-btn beis-btn-primary">Learn More</a>
@@ -108,7 +108,7 @@
           <div>
             <img src="IMAGE/beis.png" alt="BEIS Logo" />
             <p>
-              <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &TRADE</strong>
+              <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &trade</strong>
             </p>
             <p class="beis-footer-location">
               Empowering Investments. Enabling Growth.<br>
@@ -141,7 +141,7 @@
         </div>
         <hr />
         <div class="footer-bottom">
-          &copy; 2025 BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &TRADE. All rights reserved.
+          &copy; 2025 BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &trade. All rights reserved.
         </div>
       </div>
     </footer>
@@ -155,4 +155,5 @@
     </script>
   </body>
   </html>
+
 
