--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keyword" content="html ,css" />
+    <meta name="keywords" content="html,css,investment,ethiopia,beis" />
     <meta name="description" content=".." />
     <link rel="stylesheet" href="style.css" />
     <title>BEIS</title>
@@ -15,7 +16,7 @@
           <img src="IMAGE/beis.png" alt="BEIS Logo" class="beis-logo"/>
         </a>
         <div class="beis-header-content">
-          <h1 class="beis-title">BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION  &trade </h1>
+          <h1 class="beis-title">BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION&trade;</h1>
           <nav class="beis-nav">
             <a class="active" href="#home">Home</a>
             <a href="#news">News</a>
@@ -23,7 +24,7 @@
             <a href="#about">About</a>
           </nav>
         </div>
-        <button class="beis-nav-toggle" aria-label="Open navigation">&#9776;</button>
+        <button class="beis-nav-toggle" aria-label="Open navigation" aria-expanded="false">&#9776;</button>
       </div>
     </header>
 
@@ -32,7 +33,7 @@
         <div class="beis-hero-content">
           <h2>Empowering Investment, Enabling Growth</h2>
           <p>
-            Welcome to <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &trade</strong> (BEIS). <br>
+            Welcome to <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION&trade;</strong> (BEIS). <br>
             We connect opportunities, deliver solutions, and drive sustainable growth in Ethiopia’s investment landscape.
           </p>
           <a href="#about" class="beis-btn beis-btn-primary">Learn More</a>
@@ -96,7 +97,7 @@
         <article class="beis-article">
           <h2>About Ethiopia</h2>
           <p>
-            Ethiopia is one of Africa’s fastest growing economies, offering diverse opportunities in agriculture, manufacturing, energy, and services. BEIS is your trusted partner for navigating this promising landscape.
+            Ethiopia is one of Africa’s fastest growing economies, offering diverse opportunities in agriculture, manufacturing, energy, and services. BEIS is your trusted partner for navigating this dynamic market, providing you with expert insights, local knowledge, and reliable support to maximize your investments and business success in Ethiopia.
           </p>
         </article>
       </section>
@@ -108,7 +109,7 @@
           <div>
             <img src="IMAGE/beis.png" alt="BEIS Logo" />
             <p>
-              <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &trade</strong>
+              <strong>BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION&trade;</strong>
             </p>
             <p class="beis-footer-location">
               Empowering Investments. Enabling Growth.<br>
@@ -141,19 +142,23 @@
         </div>
         <hr />
         <div class="footer-bottom">
-          &copy; 2025 BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION &trade. All rights reserved.
+          &copy; 2025 BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION&trade;. All rights reserved.
         </div>
       </div>
     </footer>
     <script>
-      // Responsive nav toggle
+      // Responsive nav toggle with null checks and accessibility
       const navToggle = document.querySelector('.beis-nav-toggle');
       const nav = document.querySelector('.beis-nav');
-      navToggle.addEventListener('click', () => {
-        nav.classList.toggle('open');
-      });
+      if (navToggle && nav) {
+        navToggle.addEventListener('click', () => {
+          nav.classList.toggle('open');
+          const expanded = navToggle.getAttribute('aria-expanded') === 'true' || false;
+          navToggle.setAttribute('aria-expanded', !expanded);
+        });
+      }
     </script>
   </body>
-  </html>
+</html>
 
 
