--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="beis-header">
       <div class="beis-header-container">
         <a href="#home" class="beis-logo-link">
-          <img src="IMAGE/beis.png" alt="BEIS Logo" class="beis-logo"/>
+          <img src="+251 94 301 2840 20250613_152734.jpg" alt="BEIS Logo" class="beis-logo"/>
         </a>
         <div class="beis-header-content">
           <h1 class="beis-title">BRIGHTEEN ETHIOPIA INVESTMENT SOLUTION&trade;</h1>
@@ -160,5 +160,6 @@
     </script>
   </body>
 </html>
+
 
 
